# AA_generos_musicales

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/interim/: 02_dataset_Y_S_con_spotify_ids.csv  03_dataset_con_audiofeatures_reccobeats.csv
data/processed/: 04_dataset_filtrado.csv
data/raw/: 01_dataset_youtube_spotify.csv
docs/: Entrega 2 - Gabriel Bellesi.md  Entrega 3 - Gabriel Bellesi.md  link video.txt
generos_musicales/: __init__.py  dataset.py  features.py  plots.py
generos_musicales/modeling/: predict.py  train.py
notebooks/: 01-Armado-del-dataset.ipynb  01-Armado_del_dataset.ipynb  02-Extraccion-de-caracteristicas.ipynb  03-Filtrado-de-datods.ipynb  04-Analisis-exploratorio.ipynb  05-Entrenamiento-modelos.ipynb  06-Tunning del mejor modelo.ipynb  AA_PARCIAL.ipynb
references/: diccionario.md
reports/models/: resultados_modelos_2025-11-10_18-29-35.txt  resultados_modelos_2025-11-10_19-50-53.txt
