[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "generos_musicales"
version = "0.0.1"
description = "Trabajo para la materia Aprendizaje Automatico. Modelo de prediccion de generos musicales"
authors = [
  { name = "Gabriel Bellesi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["generos_musicales"]
include = ["pyproject.toml", "generos_musicales/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["generos_musicales"]
force-sort-within-sections = true

